Add API logic and some fixes

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
       <div class="container">
         <header>
           <img src="./assets/logo.png" alt="Logo do site" />
-          <button>
+          <button onclick="generateMovieRecommendations()">
             <p>Nova recomendação</p>
             <img src="./assets/icons/gerar.svg" alt="Gerar recomendação" />
           </button>
         </header>
 
         <section class="movies">
+          <!--
           <div class="movie">
             <div class="title">
               <span>Barbie</span>
@@ -123,6 +124,7 @@
               <span>Assistir trailer</span>
             </button>
           </div>
+          -->
         </section>
       </div>
     </section>
